--- a/src/styles/homepage.scss
+++ b/src/styles/homepage.scss
@@ -1,16 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
-
-:root {
-    --textblue: #242F65;
-    --textgray: #D9DFF2;
-    --textblackish: #2F2F2F;
-}
-
-* {
-    box-sizing: border-box;
-}
-
 @mixin text($font-family: Fraunces, $font-size: 20px, $font-weight: 500, $line-height: 128.5%, $color: var(--textgray)) {
     font-family: $font-family;
     font-size: $font-size;
@@ -29,6 +16,21 @@
 @mixin block($mt: 120px, $mb: 70px) {
     margin-top: $mt;
     margin-bottom: $mb;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+@import './banner.scss';
+
+:root {
+    --textblue: #242F65;
+    --textgray: #D9DFF2;
+    --textblackish: #2F2F2F;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 body {
@@ -80,21 +82,42 @@ img { max-width: 100%; }
         gap: 33px;
     }
     &__leftline {
-        width: 100%;
+        position: relative;
         height: 40px;
-        border-bottom: solid 1px #CCC;
         border-right: solid 1px  #CCC;
+        flex: 1;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            background-color: #CCC;
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
+        }
     }
     &__rightline {
-        width: 100%;
+        position: relative;
         height: 40px;
-        border-bottom: solid 1px #CCC;
         border-left: solid 1px  #CCC;
+        flex: 1;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            background-color: #CCC;
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
+        }
     }
     &__name {
         display: flex;
         gap: 15px;
         align-items: center;
+        white-space: nowrap;
         &-text {
             @include text($font-family: Mulish, $font-weight: 700, $color: var(--textblue));
             text-transform: uppercase;
@@ -249,7 +272,7 @@ img { max-width: 100%; }
 
 .work {
     &__project {
-        
+        position: relative;
         overflow: hidden;
         border-radius: 30px;
         margin-bottom: 140px;
