--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -68,12 +68,15 @@
             justify-content: end;
             padding-top: 57px;
             padding-right: 90px;
+            &-image-1 {
+                width: 80%;
+            }
             &-image-2 {
-                width: 400px;
+                width: 600px;
                 position: absolute;
                 z-index: 1;
                 bottom: 0%;
-                right: 25%;
+                left: 13%;
             }
         }
         
