--- a/src/styles/researchInsights.scss
+++ b/src/styles/researchInsights.scss
@@ -8,12 +8,9 @@
 
 .research {
     margin-top: 120px;
-    &__wrapper {
-        display: flex;
-        flex-direction: column;
-        gap: 47px;
-    }
+
     &__heading {
+        margin-bottom: 35px;
         &-title { @include text($font-size: 30px); margin: 0;}
         &-text {
             @include text($font-weight: 350, $line-height:128.5%, $color: #525665);
@@ -22,21 +19,31 @@
     }
     &__insights {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         gap: 42px;
+        position: relative;
+        &-link {
+            text-decoration: none;
+        }
         &-picture {
             display: flex;
             gap: 42px;
             &-img { width: calc(50% - 21px); }
         }
         &-item {
+            // display: flex;
+            // flex-direction: column;
             padding: 40px 30px;
             border: solid 1px #D8D8D8;
             border-radius: 10px;
-            width: calc(33.33% - 21px);
+            width: 300px;
+            &-img { margin: 0 auto;}
             &-title { @include text(); margin: 26px 0 14px 0; }
             &-text { @include text($font-family: Mulish, $font-size: 20px, $font-weight: 350, $line-height: 128.5%, $color: #525665);}
         }
+    }
+    .swipe_wrap {
+        padding-left: 40px;
     }
 }
 
