--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -21,15 +21,20 @@
         margin-top: 60px;
         display: flex;
         gap: 23px;
-        flex-wrap: wrap;
+        padding: 0 45px;
         &-item {
             width: 31.96%;
             padding: 56px 34px;
             border: solid 1px #E0E0E0;
             border-radius: 20px;
             background-color: #fff;
-            &-heading img {
-                margin-bottom: 26px;
+            &-heading {
+                display: flex;
+                align-items: center;
+                gap: 20px;
+                img {
+                    width: 50px;
+                }
             }
             &-heading-title {
                 @include text($font-family: Fraunces, $font-size: 30px);
@@ -59,7 +64,18 @@
 }
 
 @media screen and (max-width: 1199px) {
-    .services__list { gap: 19px; }
+    .services {
+        &__list {
+            gap: 19px;
+            &-item-heading {
+                &-title { font-size: 27px; }
+                img {width: 35px;}
+            }
+            &-item-text { font-size: 17px; }
+            &-item-field-text { font-size: 17px; }
+        }
+        
+    }
 }
 
 @media screen and (max-width: 1024px) {
