--- a/src/styles/aboutMeHome.scss
+++ b/src/styles/aboutMeHome.scss
@@ -65,26 +65,35 @@
     .about-me-home {
         padding-bottom: 110px;
         margin-top: 100px;
+        &__wrapper {
+            flex-wrap: wrap;
+        }
         &__text { font-size: 16px; }
-        &__btn { width: 115px; }
+        &__btn {
+            width: 115px;
+            bottom: -17%;
+            right: 14%;
+        }
     }
 }
 
 @media screen and (max-width: 767px) {
     .about-me-home {
         margin-top: 90px;
+        padding-bottom: 90px;
         &__wrapper {
             flex-direction: column;
         }
         &__text {
+            width: 100%;
             margin-bottom: 30px;
         }
         &__picture {
-            width: 85%;
+            width: 300px;
         }
         &__btn {
-            bottom: -12%;
-            right: 10%;
+            bottom: -9%;
+            right: 28%;
         }
     }
 }
@@ -94,7 +103,7 @@
         padding-bottom: 90px;
         &__btn {
             width: 100px;
-            bottom: -10%;
+            bottom: -7%;
         }
     }
 }
@@ -104,12 +113,13 @@
         margin-top: 60px;
         padding-bottom: 70px;
         &__text { font-size: 14px; }
-        &__btn { width: 80px; }
+        &__btn { right: 18%; }
     }
 }
 
 @media screen and (max-width: 374px) {
     .about-me-home {
-        &__btn { width: 70px; }
+        &__btn { bottom: -7%; right: 13%; }
+        &__text { width: 100%; }
     }
 }
