--- a/src/styles/aboutMeBanner.scss
+++ b/src/styles/aboutMeBanner.scss
@@ -17,7 +17,6 @@
         background: url('../img/banner_background.png') no-repeat center;
     }
     &__profilepic {
-        width: 100%;
         img {
             border-radius: 20px;
         }
@@ -26,6 +25,7 @@
         display: flex;
         flex-direction: column;
         gap: 65px;
+        max-width: 75%;
         &-info {
             &-title {
                 @include text($font-size: 44px);
